kubernetes/local/1-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginhub-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginhub-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: loginhub-gateway
    spec:
      containers:
        - name: loginhub-gateway
          image: rulerchen/loginhub-1-gateway:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.5"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: gateway
              containerPort: 8000
