kubernetes/local/1-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginhub-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: loginhub-gateway
  ports:
    - name: gateway
      port: 8001
      targetPort: 8000
      protocol: TCP
